# toption

./: .clang-format  .gitignore  README.md  meson.build  meson_options.txt  toption.doap
.builds/: alpine.yml  fedora.yml
benchmark/: benchmark.c  meson.build
include/: meson.build
include/toption/: meson.build  toption.h
lib/: config.h.in  meson.build  toption.c
subprojects/: gio.wrap
tests/: meson.build  toption.c
